crates/sourcepawn-studio/tests/text_document/goto_definition/snapshots/main__text_document__goto_definition__typedefs__funcenum_1.snap
---
source: crates/sourcepawn-studio/tests/text_document/goto_definition/typedefs.rs
assertion_line: 134
expression: "goto_definition(r#\"\n%! main.sp\nfuncenum Foo {\n          |\n          ^\n    int:public(),\n}\n\"#)"
---
[
  {
    "originSelectionRange": {
      "start": {
        "line": 0,
        "character": 9
      },
      "end": {
        "line": 0,
        "character": 12
      }
    },
    "targetUri": "file:///main.sp",
    "targetRange": {
      "start": {
        "line": 0,
        "character": 0
      },
      "end": {
        "line": 2,
        "character": 1
      }
    },
    "targetSelectionRange": {
      "start": {
        "line": 0,
        "character": 9
      },
      "end": {
        "line": 0,
        "character": 12
      }
    }
  }
]
