crates/sourcepawn-studio/tests/text_document/goto_definition/snapshots/main__text_document__goto_definition__typedefs__functag_1.snap
---
source: crates/sourcepawn-studio/tests/text_document/goto_definition/typedefs.rs
assertion_line: 84
expression: "goto_definition(r#\"\n%! main.sp\nfunctag public int:Foo();\n                    |\n                    ^\n\"#)"
---
[
  {
    "originSelectionRange": {
      "start": {
        "line": 0,
        "character": 19
      },
      "end": {
        "line": 0,
        "character": 22
      }
    },
    "targetUri": "file:///main.sp",
    "targetRange": {
      "start": {
        "line": 0,
        "character": 0
      },
      "end": {
        "line": 0,
        "character": 25
      }
    },
    "targetSelectionRange": {
      "start": {
        "line": 0,
        "character": 19
      },
      "end": {
        "line": 0,
        "character": 22
      }
    }
  }
]
