crates/sourcepawn-studio/tests/text_document/goto_definition/snapshots/main__text_document__goto_definition__typedefs__functag_2.snap
---
source: crates/sourcepawn-studio/tests/text_document/goto_definition/typedefs.rs
assertion_line: 96
expression: "goto_definition(r#\"\n%! main.sp\nfunctag public int:Foo(args);\n                        |\n                        ^\n\"#)"
---
[
  {
    "originSelectionRange": {
      "start": {
        "line": 0,
        "character": 23
      },
      "end": {
        "line": 0,
        "character": 27
      }
    },
    "targetUri": "file:///main.sp",
    "targetRange": {
      "start": {
        "line": 0,
        "character": 23
      },
      "end": {
        "line": 0,
        "character": 27
      }
    },
    "targetSelectionRange": {
      "start": {
        "line": 0,
        "character": 23
      },
      "end": {
        "line": 0,
        "character": 27
      }
    }
  }
]
