crates/sourcepawn-studio/tests/text_document/goto_definition/snapshots/main__text_document__goto_definition__typedefs__typedef_4.snap
---
source: crates/sourcepawn-studio/tests/text_document/goto_definition/typedefs.rs
assertion_line: 43
expression: "goto_definition(r#\"\n%! main.sp\nenum Bar {}\ntypedef Foo = function Bar (Bar bar);\n                             |\n                             ^\n\"#)"
---
[
  {
    "originSelectionRange": {
      "start": {
        "line": 1,
        "character": 28
      },
      "end": {
        "line": 1,
        "character": 31
      }
    },
    "targetUri": "file:///main.sp",
    "targetRange": {
      "start": {
        "line": 0,
        "character": 0
      },
      "end": {
        "line": 0,
        "character": 11
      }
    },
    "targetSelectionRange": {
      "start": {
        "line": 0,
        "character": 5
      },
      "end": {
        "line": 0,
        "character": 8
      }
    }
  }
]
