crates/sourcepawn-studio/tests/text_document/goto_definition/snapshots/main__text_document__goto_definition__typedefs__typeset_2.snap
---
source: crates/sourcepawn-studio/tests/text_document/goto_definition/typedefs.rs
assertion_line: 70
expression: "goto_definition(r#\"\n%! main.sp\ntypeset Foo {\n    function (int foo);\n                   |\n                   ^\n}\n\"#)"
---
[
  {
    "originSelectionRange": {
      "start": {
        "line": 1,
        "character": 18
      },
      "end": {
        "line": 1,
        "character": 21
      }
    },
    "targetUri": "file:///main.sp",
    "targetRange": {
      "start": {
        "line": 1,
        "character": 14
      },
      "end": {
        "line": 1,
        "character": 21
      }
    },
    "targetSelectionRange": {
      "start": {
        "line": 1,
        "character": 18
      },
      "end": {
        "line": 1,
        "character": 21
      }
    }
  }
]
